Fix profile CSS on small screen

--- a/public/assets/css/custom_mp.css
+++ b/public/assets/css/custom_mp.css
@@ -852,3 +852,9 @@ textarea.form-control.form-control-solid.this-role-form-field:focus {
     border-radius: 10px;
     padding: 0.5rem;
 }
+
+@media (max-width: 400px) {
+    .card-body {
+        padding: 1rem;
+    }
+}
